<resources>
    <string name="app_name">ComicNest</string>
    <string name="Comic">ComicNest</string>
    <string name="Haii">HAII!</string>
    <string name="Hariinimaubacapa">Hari ini mau baca komik apa?</string>
    <string name="Rank">Ranking</string>
    <string name="populer">Populer</string>
    <string name="chain">Chainsaw Man</string>
    <string name="love">12 Jt</string>
    <string name="hunter">Hunter X Hunter</string>
    <string name="Love2">11 Jt</string>
    <string name="Demon">Demon Slayer : Kimetsu No Yaiba</string>
    <string name="Love3">10 Jt</string>
    <string name="Mashle">Mashle : Magic And Muscles</string>
    <string name="Love4">9 Jt</string>
    <string name="Dr.stone">Dr.stone</string>
    <string name="Love5">8 Jt</string>
    <string name="zoom">Zoom 100</string>
    <string name="Love6">7 Jt</string>
    <string name="bleach">Bleach</string>
    <string name="Love7">6 Jt</string>
    <string name="Jujutsu">Jujutsu Kaisen</string>
    <string name="Love8">5 Jt</string>
    <string name="boruto">Boruto</string>
    <string name="Love9">4 Jt</string>
    <string name="home">Home</string>
    <string name="updates">Updates</string>
    <string name="hot">HotNews</string>
    <string name="Latest">Latest Updates</string>
    <string name="style">------------</string>
    <string name="garis">------------------------------------------------------------------------------------------------</string>
    <string name="haikyu">Haikyu!!</string>
    <string name="spyxfamily">Spy X Family</string>
    <string name="myhero">My Hero Academia</string>
    <string name="tokyo">Tokyo Revenger</string>
    <string name="onepiece">One Piece</string>
    <string name="onepunch">One Punch Man</string>
    <string name="Chapter">Chapter 1-5</string>
    <string name="Chapter1">#Chapter 1</string>
    <string name="Chapter2">#Chapter 2</string>
    <string name="Chapter3">#Chapter 3</string>
    <string name="Chapter4">#Chapter 4</string>
    <string name="Chapter5">#Chapter 5</string>
    <string name="boruto2">Boruto: Two Blue Vortex</string>
    <string name="comicjujutsukaisen">gambar komik jujutsu kaisen</string>
    <string name="Kaiju">Kaiju No.8</string>
</resources>