<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity=""
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/starsicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Comic"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="179dp"
                android:src="@drawable/iconly_broken_notification" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="left"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="404dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/garis" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/radius_comic"
                    android:src="@drawable/one_puch_man"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/onepunch"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:id="@+id/comicdemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chapter1"
                android:textSize="10sp"
                android:layout_marginStart="10dp"
                android:textColor="#000"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="12dp">

            <TextView
                android:id="@+id/subText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chapter2"
                android:textSize="10sp"
                android:layout_marginStart="10dp"
                android:textColor="#000" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="12dp">

            <TextView
                android:id="@+id/subText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chapter3"
                android:textSize="10sp"
                android:layout_marginStart="10dp"
                android:textColor="#000" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="12dp">

            <TextView
                android:id="@+id/subText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chapter4"
                android:textSize="10sp"
                android:layout_marginStart="10dp"
                android:textColor="#000" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="12dp">

            <TextView
                android:id="@+id/subText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Chapter5"
                android:textSize="10sp"
                android:layout_marginStart="10dp"
                android:textColor="#000" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/rounded_corners"
        android:layout_marginTop="189dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/iconhome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="1dp"
                android:src="@drawable/interfaceessential_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconupdates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="1dp"
                android:src="@drawable/iconly_broken_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/updates"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconhotnews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="1dp"
                android:src="@drawable/interfaceessential_flame" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hot"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>