<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity=""
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/starsicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Comic"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="179dp"
                android:src="@drawable/iconly_broken_notification" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="left"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="404dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/garis" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Rank"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/style"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:id="@+id/jujutsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="16dp">

            <!-- Gambar -->
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/jujutsukaisen"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp" />

            <!-- Judul Teks -->
            <TextView
                android:id="@+id/titleText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView1"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:text="@string/Jujutsu"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000" />

            <!-- Sub Teks -->
            <TextView
                android:id="@+id/subText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView1"
                android:layout_below="@id/titleText1"
                android:text="@string/Chapter"
                android:textSize="14sp"
                android:textColor="#555"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:id="@+id/demon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="16dp">

            <!-- Gambar -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/demonslayer"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp" />

            <!-- Judul Teks -->
            <TextView
                android:id="@+id/titleText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView2"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:text="@string/Demon"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000" />

            <!-- Sub Teks -->
            <TextView
                android:id="@+id/subText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView2"
                android:layout_below="@id/titleText2"
                android:text="@string/Chapter"
                android:textSize="14sp"
                android:textColor="#555"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:id="@+id/boruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="16dp">

            <!-- Gambar -->
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/boruto"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp" />

            <!-- Judul Teks -->
            <TextView
                android:id="@+id/titleText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView3"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:text="@string/boruto2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000" />

            <!-- Sub Teks -->
            <TextView
                android:id="@+id/subText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/imageView3"
                android:layout_below="@id/titleText3"
                android:text="@string/Chapter"
                android:textSize="14sp"
                android:textColor="#555"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="#d0d8ff">

        <RelativeLayout
            android:id="@+id/chainsaw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d1d8fc"
            android:padding="16dp">

            <!-- Gambar -->
            <ImageView
                android:id="@+id/chainsaw2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/chainsawman"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp" />

            <!-- Judul Teks -->
            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/chainsaw2"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentTop="true"
                android:text="@string/chain"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000" />

            <!-- Sub Teks -->
            <TextView
                android:id="@+id/subText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/chainsaw2"
                android:layout_below="@id/titleText"
                android:text="@string/Chapter"
                android:textSize="14sp"
                android:textColor="#555"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <!-- Footer -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="@drawable/rounded_corners"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/iconhome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="1dp"
                android:src="@drawable/interfaceessential_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconupdates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="1dp"
                android:src="@drawable/iconly_broken_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/updates"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconhotnews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="1dp"
                android:src="@drawable/interfaceessential_flame" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hot"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>